<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_text">Canberra is the capital of Australia?</string>
    <string name="true_button">true</string>
    <string name="false_button">false</string>
    <string name="correct_text">:) Congratulations!</string>
    <string name="incorrect_text">:( Try again?</string>
    <string name="next_button">next</string>
    <string name="previous_button">previous</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgement_toast">Cheating is wrong!</string>

    <string name="question_australia">Canberra is the capital of Australia</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean</string>

</resources>
