<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:andriod="http://schemas.android.com/apk/res/android"
    andriod:layout_width="match_parent"
    andriod:layout_height="match_parent"
    andriod:gravity="center"
    andriod:orientation="vertical">
    <TextView
        andriod:layout_width="wrap_content"
        andriod:layout_height="wrap_content"
        andriod:padding="24dp"
        andriod:id="@+id/question_text_view"/>
    <LinearLayout
        andriod:layout_width="wrap_content"
        andriod:layout_height="wrap_content"
        andriod:orientation="horizontal">

        <Button
            andriod:layout_width="wrap_content"
            andriod:layout_height="wrap_content"
            andriod:text="@string/true_button"
            andriod:id="@+id/true_button"/>
        <Button
            andriod:layout_width="wrap_content"
            andriod:layout_height="wrap_content"
            andriod:text="@string/false_button"
            andriod:id="@+id/false_button"/>

    </LinearLayout>
    <Button
        andriod:layout_width="wrap_content"
        andriod:layout_height="wrap_content"
        andriod:text="@string/cheat_button"
        andriod:id="@+id/cheat_button"
        />

    <LinearLayout
        andriod:layout_width="wrap_content"
        andriod:layout_height="wrap_content"
        andriod:orientation="horizontal"
        andriod:layout_marginTop="50dp"
        >
        <ImageButton
            andriod:layout_width="wrap_content"
            andriod:layout_height="wrap_content"
            andriod:id="@+id/previous_button"
            andriod:src="@drawable/arrow_left"
            andriod:layout_marginRight="100dp"
            andriod:contentDescription="@string/previous_button"
            />
        <ImageButton
            andriod:layout_width="wrap_content"
            andriod:layout_height="wrap_content"
            andriod:id="@+id/next_button"
            andriod:src="@drawable/arrow_right"
            andriod:contentDescription="@string/next_button"
            />
    </LinearLayout>

</LinearLayout>